--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta name="description" content="Microsponsors: Time is your greatest asset.">
     <link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
     <!-- CSS -->
-    <link rel="stylesheet" href="static/css/main.5175330acb.css">
+    <link rel="stylesheet" href="static/css/main.c0e7264794.css">
     <!-- Font Awesome -->
     <link rel="stylesheet"
       href="https://use.fontawesome.com/releases/v5.6.3/css/all.css"
@@ -89,7 +89,7 @@
 
         <div class="columns homepage-details__howthisworks">
           <div class="column is-6 homepage-details__howthisworks__creators" >
-            <h3 class="title is-4 is-size-6-mobile">For Creators:</h3>
+            <h3 class="title is-4 is-size-5-mobile">For Creators:</h3>
             <ul>
             <li class="is-6 is-size-7-mobile">Creators quickly &amp; easily create tokens that represent time slots via the Ethereum blockchain.</li>
             <li class="is-6 is-size-7-mobile">A time slot can be for: a podcast shout-out, a mention in a video or livestream or game, freelancing, events, services, charity... Be creative!</li>
@@ -98,7 +98,7 @@
             </ul>
           </div>
           <div class="column is-6 homepage-details__howthisworks__sponsors">
-            <h3 class="title is-4 is-size-6-mobile">For Sponsors:</h3>
+            <h3 class="title is-4 is-size-5-mobile">For Sponsors:</h3>
             <ul>
             <li class="is-6 is-size-7-mobile">Sponsors browse the market and bid on the Creators' time slots they wish to purchase.</li>
             <li class="is-6 is-size-7-mobile">Each auction has a Comments section that the Sponsor can use to ask questions and leave feedback at the end.</li>
@@ -108,25 +108,25 @@
           </div>
         </div>
 
-        <h3 class="title is-4 is-size-6-mobile ms-categories-title">
+        <h3 class="title is-4 is-size-5-mobile ms-categories-title">
           browse categories:
         </h3>
         <div class="columns homepage-details__categories">
           <div class="column is-6" >
-            <a href="exchange.html?view=auctions&sort=category-podcast" class="is-5 is-size-6-mobile">Podcasts</a>
-            <a href="exchange.html?view=auctions&sort=category-social%20media">Social Media (Influencers)</a>
-            <a href="exchange.html?view=auctions&sort=category-video">Videos/ Livestreams</a>
-            <a href="exchange.html?view=auctions&sort=category-websites">Websites</a>
-            <a href="exchange.html?view=auctions&sort=category-game">Games</a>
-            <a href="exchange.html?view=auctions&sort=category-event">Events</a>
+            <a href="exchange.html?view=auctions&sort=category-podcast" class="ms-alt-link is-5 is-size-6-mobile">Podcasts</a>
+            <a href="exchange.html?view=auctions&sort=category-social%20media" class="ms-alt-link is-5 is-size-6-mobile">Social Media (Influencers)</a>
+            <a href="exchange.html?view=auctions&sort=category-video" class="ms-alt-link is-5 is-size-6-mobile">Videos/ Livestreams</a>
+            <a href="exchange.html?view=auctions&sort=category-websites" class="ms-alt-link is-5 is-size-6-mobile">Websites</a>
+            <a href="exchange.html?view=auctions&sort=category-game" class="ms-alt-link is-5 is-size-6-mobile">Games</a>
+            <a href="exchange.html?view=auctions&sort=category-event" class="ms-alt-link is-5 is-size-6-mobile">Events</a>
           </div>
           <div class="column is-6" >
-            <a href="exchange.html?view=auctions&sort=category-freelancing">Freelancing</a>
-            <a href="exchange.html?view=auctions&sort=category-software%20development">Software Development</a>
-            <a href="exchange.html?view=auctions&sort=category-art">Art</a>
-            <a href="exchange.html?view=auctions&sort=category-newsletter">Newsletters</a>
-            <a href="exchange.html?view=auctions&sort=category-publications">Publications</a>
-            <a href="exchange.html?view=auctions&sort=category-charity">Charity/ Fundraisers</a>
+            <a href="exchange.html?view=auctions&sort=category-freelancing" class="ms-alt-link is-5 is-size-6-mobile">Freelancing</a>
+            <a href="exchange.html?view=auctions&sort=category-software%20development" class="ms-alt-link is-5 is-size-6-mobile">Software Development</a>
+            <a href="exchange.html?view=auctions&sort=category-art" class="ms-alt-link is-5 is-size-6-mobile">Art</a>
+            <a href="exchange.html?view=auctions&sort=category-newsletter" class="ms-alt-link is-5 is-size-6-mobile">Newsletters</a>
+            <a href="exchange.html?view=auctions&sort=category-publications" class="ms-alt-link is-5 is-size-6-mobile">Publications</a>
+            <a href="exchange.html?view=auctions&sort=category-charity" class="ms-alt-link is-5 is-size-6-mobile">Charity/ Fundraisers</a>
           </div>
         </div>
 
@@ -331,5 +331,5 @@
 </html>
  <!-- VERSION
 git branch: master
-git sha: 88a9c1079d014856546b344a96d64d83399426f2
+git sha: 3b71332a18561dd137d61149dbbd65e30c0bd3b2
  -->
