--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta name="description" content="Microsponsors: Time is your greatest asset.">
     <link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
     <!-- CSS -->
-    <link rel="stylesheet" href="static/css/main.b0c0da8905.css">
+    <link rel="stylesheet" href="static/css/main.7bcd3922ec.css">
     <!-- Font Awesome -->
     <link rel="stylesheet"
       href="https://use.fontawesome.com/releases/v5.6.3/css/all.css"
@@ -134,7 +134,7 @@
           <div class="detail-icon detail-icon__p2p"></div>
           <h3 class="title is-4 is-size-6-mobile">Peer-to-Peer</h3>
           <ul>
-            <li class="is-5 is-size-7-mobile">When Creators choose a winning bid, tokens are traded directly wallet-to-wallet using the <a href="https://0x.org" target="_blank">0x Protocol</a> on the public Ethereum blockchain.</li>
+            <li class="is-5 is-size-7-mobile">When Creators choose a winning bid, tokens are traded directly wallet-to-wallet using the <a href="https://0x.org" target="_blank">0x Decentralized Exchange Protocol</a> on the public Ethereum blockchain.</li>
             <li class="is-5 is-size-7-mobile">In other words: No middlemen! Microsponsors is basically a bulletin board with built-in auctions.</li>
             <li class="is-5 is-size-7-mobile">Bidding is completely decentralized. We cannot play favorites or interfere in bidding in any way.</li>
           </ul>
@@ -331,5 +331,5 @@
 </html>
  <!-- VERSION
 git branch: master
-git sha: 360507491770ff9936f7b60920fbf39b2dcc6257
+git sha: f12e4933609aef723bf90ddbc3a57c9871de55d0
  -->
