--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta name="description" content="Microsponsors: Time is your greatest asset.">
     <link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
     <!-- CSS -->
-    <link rel="stylesheet" href="static/css/main.f37c4a7e7d.css">
+    <link rel="stylesheet" href="static/css/main.f529d7f2b5.css">
     <!-- Font Awesome -->
     <link rel="stylesheet"
       href="https://use.fontawesome.com/releases/v5.6.3/css/all.css"
@@ -27,6 +27,9 @@
           <a href="https://twitter.com/microsponsors" class="navbar-item"
             target="_blank">
             <i class="fab fa-twitter"></i>
+          </a>
+          <a href="https://youtube.com/channel/UCiPe9lNDUEt6suxL1n7CJ9A/" class="navbar-item" target="_blank">
+            <i class="fab fa-youtube"></i>
           </a>
           <a href="https://medium.com/@microsponsors" class="navbar-item"
             target="_blank">
@@ -227,6 +230,12 @@
               </a>
             </div>
             <div class="footer__link-container">
+              <a href="https://youtube.com/channel/UCiPe9lNDUEt6suxL1n7CJ9A/" class="footer__link" target="_blank">
+                <i class="fab fa-youtube"></i>
+                youtube.com/channel/UCi...
+              </a>
+            </div>
+            <div class="footer__link-container">
               <a href="https://medium.com/@microsponsors" class="footer__link" target="_blank">
                 <i class="fab fa-medium-m"></i>
                 medium.com/@microsponsors
@@ -331,5 +340,5 @@
 </html>
  <!-- VERSION
 git branch: master
-git sha: 802e1f19387b1a165ec5308efffdbb8bef5bbf64
+git sha: a282de2b2b1f3e724b169752df703e84cffe5ee5
  -->
