--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta name="description" content="Microsponsors: Time is your greatest asset.">
     <link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
     <!-- CSS -->
-    <link rel="stylesheet" href="static/css/main.f529d7f2b5.css">
+    <link rel="stylesheet" href="static/css/main.211d94b32d.css">
     <!-- Font Awesome -->
     <link rel="stylesheet"
       href="https://use.fontawesome.com/releases/v5.6.3/css/all.css"
@@ -88,29 +88,22 @@
     </section> <!-- /.hero -->
 
     <section class="section homepage-details" id="ms-homepage-details">
-      <div class="container">
 
-        <div class="columns homepage-details__howthisworks">
-          <div class="column is-6 homepage-details__howthisworks__creators" >
-            <h3 class="title is-4 is-size-5-mobile">For Creators:</h3>
-            <ul>
-            <li class="is-6 is-size-7-mobile">Creators quickly &amp; easily create tokens that represent time slots via the Ethereum blockchain.</li>
-            <li class="is-6 is-size-7-mobile">A time slot can be for: a podcast shout-out, a mention in a video or livestream or game, freelancing, events, services, charity... Be creative!</li>
-            <li class="is-6 is-size-7-mobile">Each time slot automatically goes to auction on Microsponsors, the Creator picks the winning bid.</li>
-            <li class="is-6 is-size-7-mobile"><a href="exchange.html">Get Started &rarr;</a></li>
-            </ul>
-          </div>
-          <div class="column is-6 homepage-details__howthisworks__sponsors">
-            <h3 class="title is-4 is-size-5-mobile">For Sponsors:</h3>
-            <ul>
-            <li class="is-6 is-size-7-mobile">Sponsors browse the market and bid on the Creators' time slots they wish to purchase.</li>
-            <li class="is-6 is-size-7-mobile">Each auction has a Comments section that the Sponsor can use to ask questions and leave feedback at the end.</li>
-            <li class="is-6 is-size-7-mobile">Auctions end at least 24 hours before the time slot begins.</li>
-            <li class="is-6 is-size-7-mobile"><a href="exchange.html">Get Started &rarr;</a></li>
-          </ul>
-          </div>
+      <div class="homepage-details__howthisworks">
+        <div class="ms-full">
+        <iframe  src="https://www.youtube.com/embed/I0vQAFoWmDY" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+      </div>
+        <div class="ms-full">
+          <a href="exchange.html?view=registry"
+            class="button is-primary is-green is-medium is-emphasized">
+            Register Now
+            &nbsp;<i class="fas fa-chevron-right"></i>
+          </a>
         </div>
+      </div>
 
+      <div class="container">
+        <!--
         <h3 class="title is-4 is-size-5-mobile ms-categories-title">
           browse categories:
         </h3>
@@ -132,7 +125,7 @@
             <a href="exchange.html?view=auctions&sort=category-charity" class="ms-alt-link is-5 is-size-6-mobile">Charity/ Fundraisers</a>
           </div>
         </div>
-
+        -->
         <div class="homepage-details__detail">
           <div class="detail-icon detail-icon__p2p"></div>
           <h3 class="title is-4 is-size-6-mobile">Peer-to-Peer</h3>
@@ -340,5 +333,5 @@
 </html>
  <!-- VERSION
 git branch: master
-git sha: a71a7066f32be7ddda612abc6db086b82f4cdebe
+git sha: 4232b9ade42eba4d98c9bee16d299be919a24f07
  -->
