all static assets to cdn

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta name="description" content="Microsponsors: Time is your greatest asset.">
     <link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
     <!-- CSS -->
-    <link rel="stylesheet" href="https://cdn.microsponsors.io/main.211d94b32d.css">
+    <link rel="stylesheet" href="https://cdn.microsponsors.io/static/css/main.211d94b32d.css">
     <!-- Font Awesome -->
     <link rel="stylesheet"
       href="https://use.fontawesome.com/releases/v5.6.3/css/all.css"
@@ -326,7 +326,7 @@
 
       });
     </script>
-    <script type="text/javascript" src="static/js/jquery-3.3.1.min.js"></script>
+    <script type="text/javascript" src="https://cdn.microsponsors.io/static/js/jquery-3.3.1.min.js"></script>
 
   </body>
   <!-- *** VERSION INFO *** -->
