--- a/faq.html
+++ b/faq.html
@@ -8,7 +8,7 @@
     <meta name="description" content="Microsponsors: FAQ">
     <link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
     <!-- CSS -->
-    <link rel="stylesheet" href="https://cdn.microsponsors.io/static/css/main.211d94b32d.css">
+    <link rel="stylesheet" href="https://cdn.microsponsors.io/css/main.3fa8d3e149.css">
     <!-- Font Awesome -->
     <link rel="stylesheet"
       href="https://use.fontawesome.com/releases/v5.6.3/css/all.css"
@@ -335,5 +335,5 @@
 </html>
  <!-- VERSION
 git branch: master
-git sha: 4232b9ade42eba4d98c9bee16d299be919a24f07
+git sha: 08b2b079978967130d620093bea8f4af5957d278
  -->
