--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta name="description" content="Microsponsors: Time is your greatest asset.">
     <link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
     <!-- CSS -->
-    <link rel="stylesheet" href="https://cdn.microsponsors.io/static/css/main.211d94b32d.css">
+    <link rel="stylesheet" href="https://cdn.microsponsors.io/css/main.3fa8d3e149.css">
     <!-- Font Awesome -->
     <link rel="stylesheet"
       href="https://use.fontawesome.com/releases/v5.6.3/css/all.css"
@@ -91,8 +91,10 @@
 
       <div class="homepage-details__howthisworks">
         <div class="ms-full">
-        <iframe  src="https://www.youtube.com/embed/I0vQAFoWmDY" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-      </div>
+          <a href="https://www.youtube.com/watch?v=I0vQAFoWmDY" target="_blank">
+            <img src="static/img/how-it-works-youtube.png" alt="how it works video on youtube" />
+          </a>
+        </div>
         <div class="ms-full">
           <a href="exchange.html?view=registry"
             class="button is-primary is-green is-medium is-emphasized">
@@ -326,12 +328,12 @@
 
       });
     </script>
-    <script type="text/javascript" src="https://cdn.microsponsors.io/static/js/jquery-3.3.1.min.js"></script>
+    <script type="text/javascript" src="static/js/jquery-3.3.1.min.js"></script>
 
   </body>
   <!-- *** VERSION INFO *** -->
 </html>
  <!-- VERSION
 git branch: master
-git sha: 4232b9ade42eba4d98c9bee16d299be919a24f07
+git sha: 08b2b079978967130d620093bea8f4af5957d278
  -->
