--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta name="description" content="Microsponsors: Time is your greatest asset.">
     <link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
     <!-- CSS -->
-    <link rel="stylesheet" href="https://cdn.microsponsors.io/static/css/main.e77945d6ff.css">
+    <link rel="stylesheet" href="https://cdn.microsponsors.io/static/css/main.6a3f47a467.css">
     <!-- Font Awesome -->
     <link rel="stylesheet"
       href="https://use.fontawesome.com/releases/v5.6.3/css/all.css"
@@ -24,12 +24,12 @@
             target="_blank">
             <i class="fab fa-discord"></i>
           </a>
+          <a href="https://youtube.com/channel/UCiPe9lNDUEt6suxL1n7CJ9A/" class="navbar-item" target="_blank">
+            <i class="fab fa-youtube"></i>
+          </a>
           <a href="https://twitter.com/microsponsors" class="navbar-item"
             target="_blank">
             <i class="fab fa-twitter"></i>
-          </a>
-          <a href="https://youtube.com/channel/UCiPe9lNDUEt6suxL1n7CJ9A/" class="navbar-item" target="_blank">
-            <i class="fab fa-youtube"></i>
           </a>
           <a href="https://medium.com/@microsponsors" class="navbar-item"
             target="_blank">
@@ -72,9 +72,15 @@
           </a>
           <a href="exchange.html"
             class="button is-primary is-medium is-inverse is-emphasized">
-            Sell, Buy and Browse &rarr;
+            Sell, Buy and Browse
+            &nbsp;<i class="fas fa-chevron-right"></i>
           </a>
-
+          <div class="ms-featured">
+            Featured category:
+            <a href="exchange.html?view=auctions&sort=category-decentraland">
+              Decentraland &rarr;
+            </a>
+          </div>
         </div>
         <div class="container ms-container--howthisworks">
           <p>How it works</p>
@@ -132,9 +138,9 @@
           <div class="detail-icon detail-icon__p2p"></div>
           <h3 class="title is-4 is-size-6-mobile">Peer-to-Peer</h3>
           <ul>
-            <li class="is-5 is-size-7-mobile">When Creators choose a winning bid, tokens are traded directly wallet-to-wallet using the <a href="https://0x.org" target="_blank">0x Decentralized Exchange Protocol</a> on the public Ethereum blockchain.</li>
+            <li class="is-5 is-size-7-mobile">Bidding is decentralized. Nobody can interfere in bidding in any way.</li>
             <li class="is-5 is-size-7-mobile">In other words: No middlemen! Microsponsors is basically a bulletin board with built-in auctions.</li>
-            <li class="is-5 is-size-7-mobile">Bidding is completely decentralized. We cannot play favorites or interfere in bidding in any way.</li>
+            <li class="is-5 is-size-7-mobile">When Creators choose a winning bid, tokens are traded directly wallet-to-wallet using the <a href="https://0x.org" target="_blank">0x Decentralized Exchange Protocol</a> on the public Ethereum blockchain.</li>
           </ul>
         </div>
 
@@ -142,11 +148,11 @@
           <div class="detail-icon detail-icon__fees"></div>
           <h3 class="title is-4 is-size-6-mobile">Lower Fees</h3>
           <ul>
-            <li class="is-5 is-size-7-mobile">Using the Ethereum blockchain for payments means lower fees. Especially for cross-border
-            payments.</li>
             <li class="is-5 is-size-7-mobile">Creators: no fee for registration.</li>
             <li class="is-5 is-size-7-mobile">Sponsors: no fee for bidding.</li>
             <li class="is-5 is-size-7-mobile">When a bid is accepted by a seller and the auction is over, Microsponsors charges a fee of 1.5% to each side.</li>
+            <li class="is-5 is-size-7-mobile">Using the Ethereum blockchain for payments means lower fees. Especially for cross-border
+            payments.</li>
           </ul>
         </div>
 
@@ -154,9 +160,9 @@
           <div class="detail-icon detail-icon__instant"></div>
           <h3 class="title is-4 is-size-6-mobile">Instant Payouts</h3>
           <ul>
-            <li class="is-5 is-size-7-mobile">Participants are able to cash-out their earnings any time.</li>
             <li class="is-5 is-size-7-mobile">Instant transaction settlement. No waiting around!</li>
-            <li class="is-5 is-size-7-mobile">Our Referral program (slated for completion end of Q2 2020) will help you earn even more by bringing your friends along.</li>
+           <li class="is-5 is-size-7-mobile">Participants are able to cash-out their earnings any time.</li>
+            <li class="is-5 is-size-7-mobile">Our Referral program will help you earn even more by bringing your friends along (arrival date TBD).</li>
           </ul>
         </div>
 
@@ -209,37 +215,37 @@
             <div class="footer__link-container">
               <a href="https://discord.gg/j58SaNe" class="footer__link" target="_blank">
                 <i class="fab fa-discord"></i>
-                Join our Discord &rarr;
-              </a>
-            </div>
-            <div class="footer__link-container">
-              <a href="javascript: void(0);" class="footer__link">
-                <i class="far fa-envelope"></i>
-                hello<span class="is-hidden">\</span>@<span span class="is-hidden">/</span>microsponsors.io
-              </a>
-            </div>
-            <div class="footer__link-container">
-              <a href="https://twitter.com/microsponsors" class="footer__link" target="_blank">
-                <i class="fab fa-twitter"></i>
-                twitter.com/microsponsors
+                Join our Discord ↗
               </a>
             </div>
             <div class="footer__link-container">
               <a href="https://youtube.com/channel/UCiPe9lNDUEt6suxL1n7CJ9A/" class="footer__link" target="_blank">
                 <i class="fab fa-youtube"></i>
-                youtube.com/channel/UCi...
+                Tutorials on YouTube ↗
+              </a>
+            </div>
+            <div class="footer__link-container">
+              <a href="javascript: void(0);" class="footer__link">
+                <i class="far fa-envelope"></i>
+                Email hello<span class="is-hidden">\</span>@<span span class="is-hidden">/</span>microsponsors.io ↗
+              </a>
+            </div>
+            <div class="footer__link-container">
+              <a href="https://twitter.com/microsponsors" class="footer__link" target="_blank">
+                <i class="fab fa-twitter"></i>
+                twitter.com/microsponsors ↗
               </a>
             </div>
             <div class="footer__link-container">
               <a href="https://medium.com/@microsponsors" class="footer__link" target="_blank">
                 <i class="fab fa-medium-m"></i>
-                medium.com/@microsponsors
+                medium.com/@microsponsors ↗
               </a>
             </div>
             <div class="footer__link-container">
               <a href="https://github.com/microsponsors" class="footer__link" target="_blank">
                 <i class="fab fa-github"></i>
-                github.com/microsponsors
+                github.com/microsponsors ↗
               </a>
             </div>
           </div>
@@ -335,5 +341,5 @@
 </html>
  <!-- VERSION
 git branch: master
-git sha: 2e2524076396cc25cfb6157b1a7f5d53ddb97ed5
+git sha: 9032ede3bdd161bfe3436e6d40e352ed9b7440cf
  -->
