--- a/terms.html
+++ b/terms.html
@@ -8,7 +8,7 @@
     <meta name="description" content="Microsponsors: FAQ">
     <link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
     <!-- CSS -->
-    <link rel="stylesheet" href="https://cdn.microsponsors.io/static/css/main.e77945d6ff.css">
+    <link rel="stylesheet" href="https://cdn.microsponsors.io/static/css/main.6a3f47a467.css">
     <!-- Font Awesome -->
     <link rel="stylesheet"
       href="https://use.fontawesome.com/releases/v5.6.3/css/all.css"
@@ -27,7 +27,7 @@
       </div>
 
       <h1 class="title is-1 is-size-2-mobile" style="margin-bottom: 60px;">Terms of Service</h1>
-      <h2 class="title is-3 is-size-4-mobile">Binding terms of service as of March 10, 2020</h2>
+      <h2 class="title is-5 is-size-6-mobile is-centered">Binding terms of service as of March 10, 2020</h2>
     <p>
       When you use this application -- Microsponsors.io -- you are agreeing to the following Terms of Service, where you are the "user" and Microsponsors is the "application" or "app". If you do not agree to these terms, you may not use it. The following list contains the terms of this agreement:
     </p>
@@ -93,37 +93,37 @@
             <div class="footer__link-container">
               <a href="https://discord.gg/j58SaNe" class="footer__link" target="_blank">
                 <i class="fab fa-discord"></i>
-                Join our Discord &rarr;
-              </a>
-            </div>
-            <div class="footer__link-container">
-              <a href="javascript: void(0);" class="footer__link">
-                <i class="far fa-envelope"></i>
-                hello<span class="is-hidden">\</span>@<span span class="is-hidden">/</span>microsponsors.io
-              </a>
-            </div>
-            <div class="footer__link-container">
-              <a href="https://twitter.com/microsponsors" class="footer__link" target="_blank">
-                <i class="fab fa-twitter"></i>
-                twitter.com/microsponsors
+                Join our Discord ↗
               </a>
             </div>
             <div class="footer__link-container">
               <a href="https://youtube.com/channel/UCiPe9lNDUEt6suxL1n7CJ9A/" class="footer__link" target="_blank">
                 <i class="fab fa-youtube"></i>
-                youtube.com/channel/UCi...
+                Tutorials on YouTube ↗
+              </a>
+            </div>
+            <div class="footer__link-container">
+              <a href="javascript: void(0);" class="footer__link">
+                <i class="far fa-envelope"></i>
+                Email hello<span class="is-hidden">\</span>@<span span class="is-hidden">/</span>microsponsors.io ↗
+              </a>
+            </div>
+            <div class="footer__link-container">
+              <a href="https://twitter.com/microsponsors" class="footer__link" target="_blank">
+                <i class="fab fa-twitter"></i>
+                twitter.com/microsponsors ↗
               </a>
             </div>
             <div class="footer__link-container">
               <a href="https://medium.com/@microsponsors" class="footer__link" target="_blank">
                 <i class="fab fa-medium-m"></i>
-                medium.com/@microsponsors
+                medium.com/@microsponsors ↗
               </a>
             </div>
             <div class="footer__link-container">
               <a href="https://github.com/microsponsors" class="footer__link" target="_blank">
                 <i class="fab fa-github"></i>
-                github.com/microsponsors
+                github.com/microsponsors ↗
               </a>
             </div>
           </div>
@@ -164,5 +164,5 @@
 </html>
  <!-- VERSION
 git branch: master
-git sha: 2e2524076396cc25cfb6157b1a7f5d53ddb97ed5
+git sha: 9032ede3bdd161bfe3436e6d40e352ed9b7440cf
  -->
