--- a/privacy.html
+++ b/privacy.html
@@ -8,7 +8,7 @@
     <meta name="description" content="Microsponsors: FAQ">
     <link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
     <!-- CSS -->
-    <link rel="stylesheet" href="https://cdn.microsponsors.io/static/css/main.e77945d6ff.css">
+    <link rel="stylesheet" href="https://cdn.microsponsors.io/static/css/main.6a3f47a467.css">
     <!-- Font Awesome -->
     <link rel="stylesheet"
       href="https://use.fontawesome.com/releases/v5.6.3/css/all.css"
@@ -50,37 +50,37 @@
             <div class="footer__link-container">
               <a href="https://discord.gg/j58SaNe" class="footer__link" target="_blank">
                 <i class="fab fa-discord"></i>
-                Join our Discord &rarr;
-              </a>
-            </div>
-            <div class="footer__link-container">
-              <a href="javascript: void(0);" class="footer__link">
-                <i class="far fa-envelope"></i>
-                hello<span class="is-hidden">\</span>@<span span class="is-hidden">/</span>microsponsors.io
-              </a>
-            </div>
-            <div class="footer__link-container">
-              <a href="https://twitter.com/microsponsors" class="footer__link" target="_blank">
-                <i class="fab fa-twitter"></i>
-                twitter.com/microsponsors
+                Join our Discord ↗
               </a>
             </div>
             <div class="footer__link-container">
               <a href="https://youtube.com/channel/UCiPe9lNDUEt6suxL1n7CJ9A/" class="footer__link" target="_blank">
                 <i class="fab fa-youtube"></i>
-                youtube.com/channel/UCi...
+                Tutorials on YouTube ↗
+              </a>
+            </div>
+            <div class="footer__link-container">
+              <a href="javascript: void(0);" class="footer__link">
+                <i class="far fa-envelope"></i>
+                Email hello<span class="is-hidden">\</span>@<span span class="is-hidden">/</span>microsponsors.io ↗
+              </a>
+            </div>
+            <div class="footer__link-container">
+              <a href="https://twitter.com/microsponsors" class="footer__link" target="_blank">
+                <i class="fab fa-twitter"></i>
+                twitter.com/microsponsors ↗
               </a>
             </div>
             <div class="footer__link-container">
               <a href="https://medium.com/@microsponsors" class="footer__link" target="_blank">
                 <i class="fab fa-medium-m"></i>
-                medium.com/@microsponsors
+                medium.com/@microsponsors ↗
               </a>
             </div>
             <div class="footer__link-container">
               <a href="https://github.com/microsponsors" class="footer__link" target="_blank">
                 <i class="fab fa-github"></i>
-                github.com/microsponsors
+                github.com/microsponsors ↗
               </a>
             </div>
           </div>
@@ -121,5 +121,5 @@
 </html>
  <!-- VERSION
 git branch: master
-git sha: 2e2524076396cc25cfb6157b1a7f5d53ddb97ed5
+git sha: 9032ede3bdd161bfe3436e6d40e352ed9b7440cf
  -->
